<resources>
    <string name="app_label">Messaging</string>
    <string name="new_message">Messaging</string>
    <string name="menu_compose_new">Compose</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_cp_messages">Configuration messages</string>
    <string name="menu_call">Call</string>
    <string name="menu_ip_call">IP Call</string>
    <string name="menu_delete_all">Delete threads</string>
    <string name="menu_delete">Delete thread</string>
    <string name="refreshing">Refreshing...</string>
    <string name="has_draft">Draft</string>
    <string name="anonymous_recipient">Anonymous</string>
    <string name="no_subject_view">(No subject)</string>
    <string name="messagelist_sender_self">Me</string>
    <string name="view_message_details">View message details</string>
    <string name="sent_on">%s</string>
    <string name="expire_on">Expires: %s</string>
    <string name="kilobyte">KB</string>
    <string name="setting_tab_general">General</string>
    <string name="setting_tab_smsmms">SMS / MMS</string>
    <string name="setting_tab_more">More</string>
    <string name="undelivered_msg_dialog_title">Undelivered message</string>
    <string name="menu_forward">Forward</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="inline_subject">Subject: %s</string>
    <string name="drm_protected_text">* DRM protected text *</string>
    <string name="insufficient_drm_rights">Invalid DRM rights</string>
    <string name="copy_message_text">Copy message text</string>
    <string name="copy_message_to_sim">Copy to SIM</string>
    <string name="copy_to_sim_not_available">Unable to save as single message to SIM card. Message too large</string>
    <string name="copy_to_sim_number_format_err">Unable to save to SIM card. Invalid address</string>
    <string name="pref_notification_settings_title">Notification settings</string>
    <string name="pref_mms_settings_title">Multimedia message (MMS) settings</string>
    <string name="pref_sms_settings_title">Text message (SMS) settings</string>
    <string name="pref_sms_general_settings_title">General settings</string>
    <string name="pref_mms_change_over_alarm_title">MMS alert</string>
    <string name="pref_mms_change_over_alarm">Alert when mode changes to MMS</string>
    <string name="pref_summary_manage_sim_messages">Manage messages stored on your SIM card</string>
    <string name="pref_summary_mms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_mms_read_reports">Request a read report for each message you send</string>
    <string name="pref_summary_sms_delivery_reports">Request a delivery report for each message you send</string>
    <string name="pref_summary_auto_delete">Delete old messages when maximum number of messages reached</string>
    <string name="pref_summary_delete_limit">%d messages per conversation</string>
    <string name="pref_title_manage_sim_messages">Manage SIM card messages</string>
    <string name="pref_title_mms_delivery_reports">Delivery reports</string>
    <string name="pref_title_mms_read_reports">Read reports</string>
    <string name="pref_title_sms_delivery_reports">Delivery reports</string>
    <string name="pref_title_auto_delete">Delete old messages</string>
    <string name="pref_title_sms_delete">Text message limit</string>
    <string name="pref_title_mms_delete">Multimedia message limit</string>
    <string name="pref_title_notification_enabled">Notifications</string>
    <string name="pref_summary_notification_enabled">Make sounds and show icon in status bar when you receive messages</string>
    <string name="pref_title_notification_ringtone">Select ringtone</string>
    <string name="pref_title_preview_message_notification">Preview message</string>
    <string name="pref_summary_preview_message_notification">Show a preview of received messages on the status bar and lock screen</string>
    <string name="pref_title_mms_auto_retrieval">Auto-retrieve</string>
    <string name="pref_summary_mms_auto_retrieval">Automatically retrieve messages</string>
    <string name="pref_title_mms_retrieval_during_roaming">Roaming auto-retrieve</string>
    <string name="pref_summary_mms_retrieval_during_roaming">Automatically retrieve messages while roaming</string>
    <string name="message_count_zero">No messages</string>
    <string name="pref_summary_manage_smsc_messages">Message centre</string>
    <string name="pref_title_manage_smsc_messages">Not set</string>
    <string name="set_message_centre">Set message centre</string>
    <string name="pref_title_cb_activation">CB activation</string>
    <string name="pref_summary_cb_activation">Allows you to receive CB messages</string>
    <string name="pref_title_channel_configuration">Channel configuration</string>
    <string name="pref_title_mms_creation_mode">Creation mode</string>
    <string name="pref_summary_mms_creation_mode">MMS creation mode for compose message</string>
    <string name="pref_dialog_title_mms_creation_mode">Select creation mode</string>
    <string name="pref_title_font_size">Message font size</string>
    <string name="pref_title_split_view">Split view</string>
    <string name="pref_summary_split_view">Enable split view on landscape screen</string>
    <string name="pref_title_bubble_style">Bubble style</string>
    <string name="pref_title_background_style">Background style</string>
    <string name="pref_cb_settings_title">Cell broadcast (CB) settings</string>
    <string name="pref_title_sms_input_mode">Input mode</string>
    <string name="pref_summary_sms_input_mode">SMS input mode to compose message</string>
    <string name="pref_dialog_title_sms_input_mode">Select input mode</string>
    <string name="pref_title_sms_expiry_date">Expiry date</string>
    <string name="pref_summary_sms_expiry_date">Expiry date for SMS</string>
    <string name="pref_dialog_title_sms_expiry_date">Select expiry date</string>
    <string name="pref_push_message_settings_title">Push message settings</string>
    <string name="pref_title_push_message_enabled">Push messages</string>
    <string name="pref_summary_push_message_enabled">Receive push messages from network</string>
    <string name="pref_title_service_loading_action">Service loading</string>
    <string name="pref_dialog_title_service_loading_action">Service loading</string>
    <string name="menu_location">Location</string>
    <string name="tap_to_enter_location">Tap to enter location</string>
    <string name="set_skin">Set skin</string>
    <string name="pref_title_notification_backlight">Screen On</string>
    <string name="pref_summary_notification_backlight">Screen on for notification alerts</string>
    <string name="pref_signature_settings_title">Signature settings</string>
    <string name="pref_title_signature_enabled">Add signature</string>
    <string name="pref_title_signature_text">Signature text</string>
    <string name="pref_callback_title">Callback number</string>
    <string name="pref_title_callback_enabled">Enable callback number</string>
    <string name="pref_title_callback_summary">Enter a default callback number</string>
    <string name="pref_title_callback_text">Callback number</string>
    <string name="pref_msg_repetition_alert">Message alert repetition</string>
    <string name="display_settings_title">Display</string>
    <string name="pref_title_settings_cmas">Emergency Alerts</string>
    <string name="pref_title_notification_vibrateWhen">Vibrate</string>
    <string name="pref_summary_notification_vibrateWhen">Also vibrate when notified</string>
    <string name="pref_title_notification_alertWhen">Alert sound</string>
    <string name="cmas_reminder">Alert reminder</string>
    <string name="set_text_templates">Text templates</string>
    <string name="pref_summary_manage_SD_messages">Manage messages stored on your SD card</string>
    <string name="pref_title_manage_SD_messages">Manage SD card messages</string>
    <string name="pref_title_send_mms_delivery_reports">Send delivery reports</string>
    <string name="pref_summary_allow_mms_delivery_reports">Allows delivery reports to be sent</string>
    <string name="expiry_date_preferences">Message validity</string>
    <string name="expiry_date_preferences_summary">MMS message validity time</string>
    <string name="message_priority">Message Priority</string>
    <string name="mms_priority_summary">MMS message priority</string>
    <string name="message_delivery_time">Delivery time</string>
    <string name="pref_title_mmsc_url">Server address</string>
    <string name="pref_title_mmsc_port">Port</string>
    <string name="pref_title_font_size_by_volume_key_enable">Use the volume key</string>
    <string name="pref_summary_font_size_by_volume_key_enable">Change text size using the volume key</string>
    <string name="pref_title_spam_option">Message block</string>
    <string name="pref_spam_message_settings_title">Spam message settings</string>
    <string name="pref_title_spam_filter_unknown_senders">Block unknown senders</string>
    <string name="spam_list">Spam settings</string>
    <string name="spam_blocksender_summary">Block message from unknown sender</string>
    <string name="reply_all_preference_text">Group conversations</string>
    <string name="reply_all_preference_summary">Send messages as group conversations by default</string>
    <string name="my_location_option">My Location</string>
    <string name="search_location_option">Search Location</string>
    <string name="cmas_notification_preive_summary">Play a sample emergency alert tone</string>
    <string name="cmas_setting_title">Emergency message settings</string>
    <string name="pref_title_notification_preview_cmas">Emergency notification preview</string>
    <string name="empty_template_string">Tap to compose message</string>
    <string name="empty_template_string_guide">Tap the button in the top right of the screen to compose a message</string>
    <string name="pref_summary_alert_cmas">Set which alert types you receive</string>
    <string name="pref_summary_cmas_vibrateWhen">Vibrate for emergency alerts</string>
    <string name="sms_reassembly">Auto Combination</string>
    <string name="sms_reassembly_summary">Re-assemble multi-segment messages and show as a single message</string>
    <string name="pref_summary_notification_alertWhenSound">Play sound when emergency alerted</string>
    <string name="pref_summary_sms_restore">Restore saved messages to your inbox</string>
    <string name="pref_title_sms_restore">Restore messages</string>
    <string name="pref_summary_add_signature">Include signature in each message</string>
    <string name="pref_title_mms_group_mms">Group messaging</string>
    <string name="pref_summary_mms_group_mms">Send a single message to multiple recipients</string>
    <string name="cmas_receive">Receive emergency messages</string>
    <string name="explainforCMASTitle">About emergency messages</string>
    <string name="pref_truncate_long_messages_summary">Tap More to view the full text of truncated messages</string>
    <string name="pref_truncate_long_messages_title">Truncate long messages</string>
    <string name="add_to_spam_numbers">Add to spam numbers</string>
    <string name="add_to_spam_phrases">Add to spam phrases</string>
    <string name="spam_numbers_summary">Add numbers that will be blocked when they send you a message</string>
    <string name="spam_phrases_summary">Add phrases that will cause messages to be blocked</string>
    <string name="unknown_url_link_setting_title">URL links</string>
    <string name="unknown_url_link_setting_subject">Followable URLs</string>
    <string name="unknown_url_link_setting_body">URLs received in messages will be active links. This may expose you to phishing scams</string>
</resources>