<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:touchwiz="http://schemas.android.com/apk/res/touchwiz">
    <PreferenceCategory android:title="@string/pref_sms_settings_title" android:key="pref_key_sms_settings">
        <CheckBoxPreference android:title="@string/pref_title_sms_delivery_reports" android:key="pref_key_sms_delivery_reports" android:summary="@string/pref_summary_sms_delivery_reports" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="false" />
        <Preference android:title="@string/pref_title_manage_sim_messages" android:key="pref_key_manage_sim_messages" android:summary="@string/pref_summary_manage_sim_messages" />
        <Preference android:title="@string/pref_title_manage_SD_messages" android:key="pref_key_manage_SD_messages" android:summary="@string/pref_summary_manage_SD_messages" />
        <EditTextPreference android:singleLine="true" android:selectAllOnFocus="true" android:maxLength="21" android:phoneNumber="true" android:title="@string/pref_summary_manage_smsc_messages" android:key="pref_key_manage_smsc_address" android:summary="@string/pref_title_manage_smsc_messages" android:widgetLayout="@layout/round_more_icon" android:dialogTitle="@string/set_message_centre" />
        <ListPreference android:entries="@array/pref_entries_sms_input_mode" android:title="@string/pref_title_sms_input_mode" android:key="pref_key_sms_input_mode" android:summary="@string/pref_summary_sms_input_mode" android:widgetLayout="@layout/round_more_icon" android:defaultValue="Automatic" android:dialogTitle="@string/pref_dialog_title_sms_input_mode" android:entryValues="@array/pref_entry_values_sms_input_mode" />
        <ListPreference android:entries="@array/pref_entries_sms_expiry_date" android:title="@string/pref_title_sms_expiry_date" android:key="pref_key_sms_expiry" android:summary="@string/pref_summary_sms_expiry_date" android:defaultValue="3 days" android:dialogTitle="@string/pref_dialog_title_sms_expiry_date" android:entryValues="@array/pref_entry_values_sms_expiry_date" />
        <CheckBoxPreference android:title="@string/sms_reassembly" android:key="pref_key_sms_reassembly" android:summary="@string/sms_reassembly_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_mms_settings_title" android:key="pref_key_mms_settings">
        <CheckBoxPreference android:title="@string/pref_title_mms_group_mms" android:key="pref_key_mms_group_mms" android:summary="@string/pref_summary_mms_group_mms" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_title_mms_delivery_reports" android:key="pref_key_mms_delivery_reports" android:summary="@string/pref_summary_mms_delivery_reports" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_title_send_mms_delivery_reports" android:key="pref_key_send_mms_delivery_reports" android:summary="@string/pref_summary_allow_mms_delivery_reports" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_title_mms_read_reports" android:key="pref_key_mms_read_reports" android:summary="@string/pref_summary_mms_read_reports" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/pref_title_mms_auto_retrieval" android:key="pref_key_mms_auto_retrieval" android:summary="@string/pref_summary_mms_auto_retrieval" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_title_mms_retrieval_during_roaming" android:key="pref_key_mms_retrieval_during_roaming" android:summary="@string/pref_summary_mms_retrieval_during_roaming" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:dependency="pref_key_mms_auto_retrieval" android:defaultValue="false" />
        <ListPreference android:entries="@array/pref_entries_mms_creation_mode" android:title="@string/pref_title_mms_creation_mode" android:key="pref_key_mms_creation_mode" android:summary="@string/pref_summary_mms_creation_mode" android:widgetLayout="@layout/round_more_icon" android:defaultValue="free" android:dialogTitle="@string/pref_dialog_title_mms_creation_mode" android:entryValues="@array/pref_entry_values_mms_creation_mode" />
        <CheckBoxPreference android:title="@string/pref_mms_change_over_alarm_title" android:key="pref_key_mms_change_over_alarm" android:summary="@string/pref_mms_change_over_alarm" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/reply_all_preference_text" android:key="pref_key_mms_allow_reply_all" android:summary="@string/reply_all_preference_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="true" />
        <ListPreference android:entries="@array/expiry_date_entries" android:title="@string/expiry_date_preferences" android:key="pref_key_mms_expiry_time" android:summary="@string/expiry_date_preferences_summary" android:widgetLayout="@layout/round_more_icon" android:defaultValue="4" android:entryValues="@array/expiry_date_values" />
        <ListPreference android:entries="@array/mms_priority_entries" android:title="@string/message_priority" android:key="pref_key_mmspriority" android:summary="@string/mms_priority_summary" android:widgetLayout="@layout/round_more_icon" android:defaultValue="2" android:dialogTitle="@string/message_priority" android:entryValues="@array/mms_priority_values" />
        <ListPreference android:entries="@array/delivery_time_entries" android:title="@string/message_delivery_time" android:key="pref_key_mms_delivery_time" android:summary="@string/message_delivery_time" android:widgetLayout="@layout/round_more_icon" android:defaultValue="0" android:dialogTitle="@string/message_delivery_time" android:entryValues="@array/delivery_time_values" />
        <EditTextPreference android:enabled="false" android:singleLine="true" android:title="@string/pref_title_mmsc_url" android:key="pref_mmsc_url" android:summary="http://mmsc.vnet.mobi" android:defaultValue="http://mmsc.vnet.mobi" android:dialogTitle="@string/pref_title_mmsc_url" />
        <EditTextPreference android:enabled="false" android:singleLine="true" android:title="@string/pref_title_mmsc_port" android:key="pref_mmsc_port" android:summary="80" android:defaultValue="80" android:dialogTitle="@string/pref_title_mmsc_port" />
    </PreferenceCategory>
</PreferenceScreen>