<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:touchwiz="http://schemas.android.com/apk/res/touchwiz">
    <PreferenceCategory android:title="@string/pref_push_message_settings_title" android:key="pref_key_push_message_settings">
        <CheckBoxPreference android:title="@string/pref_title_push_message_enabled" android:key="pref_key_enable_push_message" android:summary="@string/pref_summary_push_message_enabled" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="true" />
        <ListPreference android:entries="@array/pref_entries_service_loading_action" android:title="@string/pref_title_service_loading_action" android:key="pref_key_service_loading_action" android:widgetLayout="@layout/round_more_icon" android:dependency="pref_key_enable_push_message" android:defaultValue="Prompt" android:dialogTitle="@string/pref_dialog_title_service_loading_action" android:entryValues="@array/pref_entry_values_service_loading_action" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_cb_settings_title" android:key="pref_key_cb_settings">
        <CheckBoxPreference android:title="@string/pref_title_cb_activation" android:key="pref_key_cb_settings_activation" android:summary="@string/pref_summary_cb_activation" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="false" />
        <PreferenceScreen android:title="@string/pref_title_channel_configuration" android:key="pref_key_channel_configuration" android:dependency="pref_key_cb_settings_activation">
            <intent android:targetPackage="com.android.mms" android:targetClass="com.android.mms.ui.CbConfigPreferenceActivity" />
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_notification_settings_title" android:key="pref_notification_settings">
        <CheckBoxPreference android:title="@string/pref_title_notification_enabled" android:key="pref_key_enable_notifications" android:summary="@string/pref_summary_notification_enabled" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_title_notification_backlight" android:key="pref_key_backlight" android:summary="@string/pref_summary_notification_backlight" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:dependency="pref_key_enable_notifications" android:defaultValue="true" />
        <com.android.mms.ui.MmsRingtonePreference android:title="@string/pref_title_notification_ringtone" android:key="pref_key_ringtone" android:widgetLayout="@layout/round_more_icon" android:dependency="pref_key_enable_notifications" android:defaultValue="content://settings/system/notification_sound" android:ringtoneType="notification" />
        <CheckBoxPreference android:title="@string/pref_title_notification_vibrateWhen" android:key="pref_key_vibrateWhen_checkbox" android:summary="@string/pref_summary_notification_vibrateWhen" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:dependency="pref_key_enable_notifications" android:defaultValue="true" />
        <ListPreference android:entries="@array/msg_repetition_alert_Array" android:title="@string/pref_msg_repetition_alert" android:key="pref_key_msg_reminder_alert" android:widgetLayout="@layout/round_more_icon" android:dependency="pref_key_enable_notifications" android:defaultValue="1" android:entryValues="@array/msg_repetition_alert_Array_values" />
        <CheckBoxPreference android:title="@string/pref_title_preview_message_notification" android:key="pref_key_enable_preview_message" android:summary="@string/pref_summary_preview_message_notification" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:dependency="pref_key_enable_notifications" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/cmas_setting_title" android:key="pref_cmas_settings">
        <PreferenceScreen android:title="@string/pref_title_settings_cmas" android:key="pref_key_cmas" android:summary="@string/pref_summary_alert_cmas" />
        <CheckBoxPreference android:title="@string/cmas_receive" android:key="pref_cmas_receive_class1" android:defaultValue="true" />
        <Preference android:title="@string/pref_title_notification_preview_cmas" android:key="pref_key_emergency_alert" android:summary="@string/cmas_notification_preive_summary" />
        <CheckBoxPreference android:title="@string/pref_title_notification_vibrateWhen" android:key="pref_key_cmas_vibrateWhen_checkbox" android:summary="@string/pref_summary_cmas_vibrateWhen" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/pref_title_notification_alertWhen" android:key="pref_key_cmas_audioWhen_checkbox" android:summary="@string/pref_summary_notification_alertWhenSound" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="true" />
        <ListPreference android:entries="@array/msg_reminder_alert_Array" android:title="@string/cmas_reminder" android:key="pref_key_emergency_alert_reminder" android:widgetLayout="@layout/round_more_icon" android:defaultValue="0" android:entryValues="@array/msg_reminder_alert_Array_values" />
        <Preference android:title="@string/explainforCMASTitle" android:key="pref_key_explain_emergency_alert" android:dependency="pref_cmas_receive_class1" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_callback_title" android:key="pref_callback_settings">
        <CheckBoxPreference android:title="@string/pref_title_callback_enabled" android:key="pref_key_enable_callback" android:summary="@string/pref_title_callback_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="false" />
        <EditTextPreference android:singleLine="true" android:maxLength="20" android:title="@string/pref_title_callback_text" android:key="pref_key_callback_text" android:summary="@string/pref_title_callback_text" android:dependency="pref_key_enable_callback" android:inputType="phone" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_spam_message_settings_title" android:key="pref_key_spam_settings">
        <ListPreference android:entries="@array/pref_entries_spam_option" android:title="@string/pref_title_spam_option" android:key="pref_key_spam_option" android:defaultValue="2" android:dialogTitle="@string/pref_title_spam_option" android:entryValues="@array/pref_entry_values_spam_option" />
        <CheckBoxPreference android:title="@string/spam_list" android:key="pref_key_spam_option_enable" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:defaultValue="false" />
        <Preference android:title="@string/add_to_spam_numbers" android:key="pref_key_spam_num_add" android:summary="@string/spam_numbers_summary" android:dependency="pref_key_spam_option_enable" />
        <Preference android:title="@string/add_to_spam_phrases" android:key="pref_key_spam_text_add" android:summary="@string/spam_phrases_summary" android:dependency="pref_key_spam_option_enable" />
        <CheckBoxPreference android:title="@string/pref_title_spam_filter_unknown_senders" android:key="pref_key_spam_filter_unknown_enable" android:summary="@string/spam_blocksender_summary" android:widgetLayout="@touchwiz:layout/preference_widget_twcheckbox" android:dependency="pref_key_spam_option_enable" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>