<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/map_main" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/message_top_bg" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="17.0dip" android:textColor="@color/msg_location_reserve_subtitle_color" android:id="@id/subject_location" android:paddingLeft="14.0dip" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/menu_location" />
        <LinearLayout android:orientation="horizontal" android:focusable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="7.0dip">
            <EditText android:textSize="19.0dip" android:id="@id/location" android:background="@drawable/selector_richcontainer" android:paddingLeft="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:minHeight="40.0dip" android:hint="@string/tap_to_enter_location" android:singleLine="true" android:maxLength="1800" android:capitalize="sentences" android:layout_weight="1.0" android:imeOptions="actionDone|flagNoEnterAction" />
            <ImageButton android:id="@id/search" android:background="@drawable/selector_search_btn" android:layout_width="43.0dip" android:layout_height="40.0dip" android:layout_marginLeft="7.0dip" android:layout_marginRight="6.0dip" android:contentDescription="@string/search_location_option" />
            <ImageButton android:id="@id/current_location" android:background="@drawable/selector_current_location_btn" android:layout_width="43.0dip" android:layout_height="40.0dip" android:layout_marginRight="7.0dip" android:contentDescription="@string/my_location_option" />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <com.google.android.maps.MapView android:enabled="true" android:id="@id/mapview_select" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:apiKey="0e2-_R-TfJvIB8nm1t1KMmwf6TNLj_ZrpJ2H5TQ" />
    </FrameLayout>
</LinearLayout>